--- a/index.html
+++ b/index.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Indie+Flower" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Fascinate+Inline|Indie+Flower|Orbitron" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Fascinate+Inline|Indie+Flower|Orbitron|Shadows+Into+Light" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Fascinate+Inline|Indie+Flower|Orbitron|Shadows+Into+Light|VT323" rel="stylesheet">
 </head>
 <body>
+
+
+<header>
+    <div>
+    <h1>HEADER</h1>
+    <p>About Funiture </p>
+    </div>
+</header>
+
+<section class="greenSection GSec1">
+    <div>
+    <h1>Section1</h1>
+    <p>Add the funiture categories and some pictures in here</p>
+    <p>sofa<br>bed<br>dining-table<br>TV stand</p>
+    </div>
+</section>
+
+<footer>
+    <div>
+    <h1>FOOTER</h1>
+    <p>About us ,like some social medias </p>
+    </div>
+</footer>
+
+
 
 </body>
 </html>
