--- a/index.html
+++ b/index.html
@@ -14,29 +14,46 @@
 <body>
 
 
-<header>
+<!--<header>
     <div>
-    <h1>HEADER</h1>
-    <p>About Funiture </p>
+    <h1><img src="671509051667_.pic.png" width="250" height="200" alt="logo"></h1>
+        <nav>
+            <div class="headerbreak"></div>
+            <ul>
+
+                <li>Living Room </li>
+                <li>Bedroom </li>
+                <li>Kitchen and Dinning room </li>
+                <li>Enterway </li>
+                <li></li>
+                <li></li>
+                <li>More</li>
+            </ul>
+            <div class="headerbreak"></div>
+        </nav>
+
     </div>
-</header>
+</header>-->
 
-<section class="greenSection GSec1">
-    <div>
-    <h1>Section1</h1>
-    <p>Add the funiture categories and some pictures in here</p>
-    <p>sofa<br>bed<br>dining-table<br>TV stand</p>
+
+<section id="second-page" class="align-center">
+    <h1>Quality luxury handmade furniture.</h1>
+    <div class="info-container">
+        <ul class="info-one">
+            <li><img src="assets/img/balance.png" alt="" width="68" /></li>
+            <li><strong>Value</strong></li>
+            <li>We know the price might not be a problem for you, but at royal furbish, the price for the quality you receive, is the best deal you can ever make.</li>
+        </ul>
+        <ul class="info-two">
+            <li><img src="assets/img/diamond.png" alt="" width="68" /></li>
+            <li><strong>Respect</strong></li>
+            <li>The core value we are most fond of and which we never forget, is the respect we bear for our customers. My customer my master, that's what we consider.</li>
+        </ul>
+        <ul class="info-three">
+            <li><img src="assets/img/money.png" alt="" width="68" /></li>
+            <li><strong>Investment</strong></li>
+            <li>At royalfurbish, we take care of our customers, the investment you make is money well spent because you will receive the best there is.</li>
+        </ul>
     </div>
-</section>
-
-<footer>
-    <div>
-    <h1>FOOTER</h1>
-    <p>About us ,like some social medias </p>
-    </div>
-</footer>
-
-
-
 </body>
 </html>
